--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ ext{
     butterknifeVersion = '8.8.1'
     utilcodeVersion = '1.12.6'
     dagger = '2.14.1'
+    aRouter = '1.3.1'
+    aRouterCompiler='1.1.4'
 }
