--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,10 @@ android {
 
             annotationProcessorOptions {
 
-                arguments = [moduleName :project.getName() ]
+                arguments = [moduleName: project.getName()]
 
-            } }
+            }
+        }
     }
 
     buildTypes {
@@ -35,8 +36,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //dagger2
-    implementation "com.google.dagger:dagger:$rootProject.dagger"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.dagger"
+    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     implementation 'org.glassfish:javax.annotation:10.0-b28'
     //butterknife
     implementation "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
@@ -50,6 +51,10 @@ dependencies {
     //rxPermissions权限请求
     implementation "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissionsVersion"
     //Arouter
-    implementation"com.alibaba:arouter-api:$rootProject.aRouter"
-    annotationProcessor"com.alibaba:arouter-compiler:$rootProject.aRouterCompiler"
+    implementation "com.alibaba:arouter-api:$rootProject.aRouterVersion"
+    annotationProcessor "com.alibaba:arouter-compiler:$rootProject.aRouterCompilerVersion"
+    //rxPermissions
+    implementation "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissionsVersion"
+    //immersionbar沉浸式状态栏
+    implementation "com.gyf.immersionbar:immersionbar:$rootProject.immersionbarVersion"
 }
