--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,15 @@ task clean(type: Delete) {
 
 ext{
     rxJavaVersion = '2.0.7'
-    annotation = '10.0-b28'
+    annotationVersion = '10.0-b28'
     rxBindingVersion = '2.1.1'
     rxAndroidVersion = '2.0.1'
     rxpermissionsVersion = '0.9.5@aar'
     butterknifeVersion = '8.8.1'
     utilcodeVersion = '1.12.6'
-    dagger = '2.14.1'
-    aRouter = '1.3.1'
-    aRouterCompiler='1.1.4'
+    daggerVersion = '2.14.1'
+    aRouterVersion = '1.3.1'
+    aRouterCompilerVersion='1.1.4'
+    rxpermissionsVersion = '0.9.5@aar'
+    immersionbarVersion ='2.3.3-beta09'
 }
