--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissionsVersion"
     //immersionbar沉浸式状态栏
     implementation "com.gyf.immersionbar:immersionbar:$rootProject.immersionbarVersion"
+    //mpchartandroid
+    implementation "com.github.PhilJay:MPAndroidChart:$rootProject.mpchartandroidVersion"
 }
