--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -29,7 +29,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext{
+ext {
     rxJavaVersion = '2.0.7'
     annotationVersion = '10.0-b28'
     rxBindingVersion = '2.1.1'
@@ -39,7 +39,9 @@ ext{
     utilcodeVersion = '1.12.6'
     daggerVersion = '2.14.1'
     aRouterVersion = '1.3.1'
-    aRouterCompilerVersion='1.1.4'
+    aRouterCompilerVersion = '1.1.4'
     rxpermissionsVersion = '0.9.5@aar'
-    immersionbarVersion ='2.3.3-beta09'
+    immersionbarVersion = '2.3.3-beta09'
+    mpchartandroidVersion = 'v3.1.0-alpha'
+    eventbus = '3.0.0'
 }
